configs/traefik/service-internal.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-internal
  namespace: traefik
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: web
      port: 8080
      targetPort: 8080
