configs/traefik/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
spec:
  controllerName: traefik.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      port: 443
      protocol: HTTPS
      hostname: traefik.whitworth.nz
      tls:
        certificateRefs:
          - name: whitworth-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-route
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - traefik.whitworth.nz
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      backendRefs:
        - name: traefik
          port: 80
          weight: 1
