configs/traefik/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - traefik.lab.whitworth.nz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dashboard
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: traefik
          port: 8080
